# github-repo-searcher

./: .gitignore  .repo-cache.json  Cargo.toml  README.md  todo.txt  url_debug.txt
src/: browser.rs  cache.rs  cli.rs  clipboard.rs  filter.rs  formatter.rs  fuzzy_finder.rs  github.rs  gitlab.rs  main.rs  menu.rs  repository.rs  terminal.rs
