[package]
name = "gh-url-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
octocrab = "0.18"
tokio = { version = "1.0", features = ["full"] }
skim = "0.10"
libc = "0.2"
ctrlc = "3.2"
termion = "2.0"

[dev-dependencies]
mockito = "0.30"
tokio-test = "0.4"

[build-dependencies]
