[package]
name = "gh-url-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
octocrab = "0.44.0"
tokio = { version = "1.0", features = ["full"] }
termion = "4.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4.1"
